Increase to 15rem - fix name overflow under navbar

--- a/styles.css
+++ b/styles.css
@@ -261,7 +261,7 @@ p {
 }
 
 main {
-  padding-top: 13rem;
+  padding-top: 15rem;
   position: relative;
   z-index: 1;
   min-height: 100vh;
